math-core/tests/snapshots/wiki_test__wiki087.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\leftarrow \\gets, \\nleftarrow, \\longleftarrow"
---
<math>
    <mo>←</mo>
    <mo lspace="0">←</mo>
    <mo>,</mo>
    <mo>↚</mo>
    <mo>,</mo>
    <mo>⟵</mo>
</math>
