math-core/tests/snapshots/wiki_test__wiki088.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\leftrightarrow, \\nleftrightarrow, \\longleftrightarrow"
---
<math>
    <mo>↔</mo>
    <mo>,</mo>
    <mo>↮</mo>
    <mo>,</mo>
    <mo>⟷</mo>
</math>
