math-core/tests/snapshots/wiki_test__wiki089.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\uparrow, \\downarrow, \\updownarrow"
---
<math>
    <mo stretchy="false">↑</mo>
    <mo>,</mo>
    <mo stretchy="false">↓</mo>
    <mo>,</mo>
    <mo stretchy="false">↕</mo>
</math>
