math-core/tests/snapshots/wiki_test__wiki090.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\nearrow, \\swarrow, \\nwarrow, \\searrow"
---
<math>
    <mo lspace="0">↗</mo>
    <mo>,</mo>
    <mo>↙</mo>
    <mo>,</mo>
    <mo>↖</mo>
    <mo>,</mo>
    <mo>↘</mo>
</math>
