math-core/tests/snapshots/wiki_test__wiki091.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\mapsto, \\longmapsto"
---
<math>
    <mo lspace="0" rspace="0">↦</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⟼</mo>
</math>
