math-core/tests/snapshots/wiki_test__wiki092.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\rightharpoonup \\rightharpoondown \\leftharpoonup \\leftharpoondown \\upharpoonleft \\upharpoonright \\downharpoonleft \\downharpoonright \\rightleftharpoons \\leftrightharpoons"
---
<math>
    <mo lspace="0" rspace="0">⇀</mo>
    <mo lspace="0" rspace="0">⇁</mo>
    <mo lspace="0" rspace="0">↼</mo>
    <mo lspace="0" rspace="0">↽</mo>
    <mo lspace="0" rspace="0">↿</mo>
    <mo lspace="0" rspace="0">↾</mo>
    <mo lspace="0" rspace="0">⇃</mo>
    <mo lspace="0" rspace="0">⇂</mo>
    <mo lspace="0" rspace="0">⇌</mo>
    <mo lspace="0">⇋</mo>
</math>
