math-core/tests/snapshots/wiki_test__wiki093.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\curvearrowleft \\circlearrowleft \\Lsh \\upuparrows \\rightrightarrows \\rightleftarrows \\rightarrowtail \\looparrowright"
---
<math>
    <mo>↶</mo>
    <mo>↺</mo>
    <mo>↰</mo>
    <mo>⇈</mo>
    <mo>⇉</mo>
    <mo>⇄</mo>
    <mo>↣</mo>
    <mo>↬</mo>
</math>
