math-core/tests/snapshots/wiki_test__wiki094.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\curvearrowright \\circlearrowright \\Rsh \\downdownarrows \\leftleftarrows \\leftrightarrows \\leftarrowtail \\looparrowleft"
---
<math>
    <mo rspace="0">↷</mo>
    <mo lspace="0" rspace="0">↻</mo>
    <mo lspace="0" rspace="0">↱</mo>
    <mo lspace="0" rspace="0">⇊</mo>
    <mo lspace="0" rspace="0">⇇</mo>
    <mo lspace="0" rspace="0">⇆</mo>
    <mo lspace="0" rspace="0">↢</mo>
    <mo lspace="0">↫</mo>
</math>
