math-core/tests/snapshots/wiki_test__wiki095.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\hookrightarrow \\hookleftarrow \\multimap \\leftrightsquigarrow \\rightsquigarrow \\twoheadrightarrow \\twoheadleftarrow"
---
<math>
    <mo lspace="0" rspace="0">↪</mo>
    <mo lspace="0" rspace="0">↩</mo>
    <mo lspace="0" rspace="0">⊸</mo>
    <mo lspace="0" rspace="0">↭</mo>
    <mo lspace="0" rspace="0">⇝</mo>
    <mo lspace="0" rspace="0">↠</mo>
    <mo lspace="0">↞</mo>
</math>
