math-core/tests/snapshots/wiki_test__wiki096.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\amalg \\P \\S \\% \\dagger\\ddagger\\ldots\\cdots"
---
<math>
    <mo>⨿</mo>
    <mi>¶</mi>
    <mi>§</mi>
    <mi>%</mi>
    <mi>†</mi>
    <mi>‡</mi>
    <mrow>
        <mo>.</mo>
        <mo lspace="0" rspace="0">.</mo>
        <mo>.</mo>
    </mrow>
    <mrow>
        <mo>·</mo>
        <mo lspace="0" rspace="0">·</mo>
        <mo>·</mo>
    </mrow>
</math>
