math-core/tests/snapshots/wiki_test__wiki097.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\smile \\frown \\wr \\triangleleft \\triangleright"
---
<math>
    <mo rspace="0">⌣</mo>
    <mo lspace="0" rspace="0">⌢</mo>
    <mo lspace="0">≀</mo>
    <mi>◁</mi>
    <mi>▷</mi>
</math>
