math-core/tests/snapshots/wiki_test__wiki098.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\diamondsuit, \\heartsuit, \\clubsuit, \\spadesuit, \\Game, \\flat, \\natural, \\sharp"
---
<math>
    <mi>♢</mi>
    <mo>,</mo>
    <mi>♡</mi>
    <mo>,</mo>
    <mi>♣</mi>
    <mo>,</mo>
    <mi>♠</mi>
    <mo>,</mo>
    <mi>⅁</mi>
    <mo>,</mo>
    <mi>♭</mi>
    <mo>,</mo>
    <mi>♮</mi>
    <mo>,</mo>
    <mi>♯</mi>
</math>
